alignment-and-greeting-fix

--- a/style.css
+++ b/style.css
@@ -256,6 +256,11 @@ svg {
   margin-block-start: 335px;
 }
 
+.hero__text>a:nth-of-type(2) {
+  margin-top: 12px;
+  margin-inline: 24px;
+}
+
 .hero__headline {
   margin-block-end: 24px;
 }
@@ -324,7 +329,7 @@ h1>span {
   }
 
   .hero__text {
-    /* width: 62vw; */
+    width: 62vw;
     margin-block-start: 90px;
     margin-right: -30px;
     flex: 1 0 58vw;
@@ -557,6 +562,9 @@ h1>span {
   }
 
   .projects__links a {
+    display: block;
+    padding-bottom: 1.5rem;
+    line-height: 1.5;
     margin-inline-end: 30px;
   }
 
@@ -616,7 +624,7 @@ h1>span {
 
   .projects__links {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
     justify-self: center;
     align-self: center;
     z-index: 1;
